<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="calculator.johnmurphy.com.activities.CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/outputDisplay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:inputType="text"
            android:textIsSelectable="true"
            android:gravity="end"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="2"
            android:text="@string/btnClear"
            android:textSize="@dimen/button_text_size"
            />

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:src="@drawable/ic_backspace_black_24dp"
            />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnDivide"
            android:textSize="@dimen/button_text_size"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnMultiply"
            android:textSize="@dimen/button_text_size"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnSubtract"
            android:textSize="@dimen/button_text_size"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnAdd"
            android:textSize="@dimen/button_text_size"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonBrackets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnBrackets"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btn0"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnPoint"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/btnEquals"
            android:textSize="@dimen/button_text_size"
            />
    </TableRow>
</TableLayout>